--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,44 @@
-    </body>
-</html>
+<footer>
+    <div id='mainMainRow5' class='dataTypeMainRow mainMainRow5 ' data-type='MainRow'>
+        <div id='mainMainContent6' class='dataTypeMainContent mainMainContent6' data-type='MainContent'>
+            <div class='mainShape43' ></div>
+            <div class='footer-column fc-1'>
+                <h2>Company</h2>
+                <p>
+                    <a href="/">Home</a><br>
+                    <a href="/about-us">About</a><br>
+                    <a target="_blank" href="http://clarify.io/jobs">Jobs</a><br>
+                    <a href="/events">Events</a><br>
+                    <a href="/news">In the News</a><br>
+                    <a target="_blank" href="http://clarify.totemapp.com/">Press Kit</a><br>
+                    <a href="/contact-us">Contact us</a>
+                </p>
+            </div>
+            <div class='footer-column fc-2'>
+                <h2>Developers</h2>
+                <p>
+                    <a href="http://docs.clarify.io">Documentation</a><br>
+                    <a href="http://clarify.io/blog/">Tech Blog</a><br>
+                    <a href="/pricing">Pricing</a><br>
+                    <a href="https://developer.clarify.io/accounts/signup/">Sign Up</a><br>
+                    <a href="/try-it-now">Try it Now</a><br>
+                </p>
+            </div>
+            <div class='footer-column fc-3'>
+                <h2>Visit Us</h2>
+                Clarify, Inc<br>501 Pedernales Street<br>Building 1B<br>Austin, TX 78702
+            </div>
+            <div class='footer-column fc-4'>
+                <h2>Follow Us</h2>
+                <a href="https://angel.co/clarify-inc">Angelist</a><br>
+                <a href="https://www.linkedin.com/company/clarify-inc">Linked In</a><br>
+                <a target="_blank" href="https://github.com/Clarify">Github</a><br>
+                <a href="https://twitter.com/clarify_inc">Twitter</a><br>
+                <a href="https://www.facebook.com/clarifyinc">Facebook</a><br>
+            </div>
+            <div class="terms-of-service center">
+                <span>&copy; 2015 Clarify, Inc. &nbsp;| &nbsp;<a href="\terms-of-service">Terms of Service&nbsp;</a></span>
+            </div>
+        </div>
+    </div>
+</footer>
