--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|weights:[400:00|Candal:400|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|Candal:400|Candal:400|Candal:400|Averia Sans Libre:300,300italic,400,italic,700,700italic|Candal:400|Droid Serif:400,italic,700,700italic|Candal:400|Candal:400|Arial:400,700|Oswald:300,400,700|Dosis:200,300,400,500,600,700,800|Coustard:400,900|Enriqueta:400,700&subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic"/>
 <script type="text/javascript" src="http://clarify.io/wp-content/themes/clarify/js/jquery/1.7.2/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="http://clarify.io/wp-content/themes/clarify/fonts/alefhebrew.css"/>
-<script src="http://clarify.io/wp-content/themes/clarify/js/skrollr.js" type='text/javascript'></script>
-<script src="http://clarify.io/wp-content/themes/clarify/js/script.js" type='text/javascript'></script>
+<!--<script src="http://clarify.io/wp-content/themes/clarify/js/skrollr.js" type='text/javascript'></script>-->
+<!--<script src="http://clarify.io/wp-content/themes/clarify/js/script.js" type='text/javascript'></script>-->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta property="og:image" content="http://clarify.io/wp-content/uploads/2014/07/clarify-negative-square.png" />
 <link rel="image_src"
