--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,113 +1,113 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<head>
-    {% include head.html %}
-</head>
-<body>
-<div id='skrollr-body'>
-    <input type="hidden" class="bp_data" data-bp="pc" data-value="960" />
-    <div class='generalSitebackgroundDiv'></div>
-    <div class='innerMainPanel0'></div>
-    <div class='dataTypeMainPanel mainMainPanel0' data-type='MainPanel'>
-        {% include navigation.html %}
+    <head>
+        {% include head.html %}
+    </head>
+    <body>
+        <div>
+            <input type="hidden" class="bp_data" data-bp="pc" data-value="960" />
+            <div class='generalSitebackgroundDiv'></div>
+            <div class='innerMainPanel0'></div>
+            <div class='dataTypeMainPanel mainMainPanel0' data-type='MainPanel'>
+                {% include navigation.html %}
 
-        <div data-id='mainShape24' class='dataTypeShape  mainShape24 mainShape' data-type='Shape' ></div>
+                <div data-id='mainShape24' class='dataTypeShape  mainShape24 mainShape' data-type='Shape' ></div>
 
-        <header>
-            <div class='dataTypeMainRow mainMainRow1 ' data-type='MainRow'>
-                <div class='dataTypeMainContent mainMainContent2' data-type='MainContent'></div>
+                <header>
+                    <div class='dataTypeMainRow mainMainRow1 ' data-type='MainRow'>
+                        <div class='dataTypeMainContent mainMainContent2' data-type='MainContent'></div>
+                    </div>
+                </header>
+                <main>
+                    <div id='mainMainRow3' class='dataTypeMainRow mainMainRow3' data-type='MainRow'>
+                        <div id='mainMainContent4' class='dataTypeMainContent mainMainContent4 ContentHeight' data-type='MainContent'>
+                            <div id='innerText27__Text27_Text93600' data-id='innerText27' style='' data-type="text" class='inner_text innerText27 text_editor_resets' >
+                                <div  class='ContentDiv'>
+                                    <h1 class="PageTitle ospfxwcd97a6f780b1dffd901d18153eacfc88ossfx">Documentation</h1>
+                                </div>
+                            </div>
+                            <div id='innerImage38__Image38_Image1174275' data-id='innerImage38' data-type='Image' class='dataTypeImage  innerImage38'>
+                                <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/quickstarts.png"    >
+                            </div>
+                            <div id='innerText74__Text74_Text12138' data-id='innerText74' style='' data-type="text" class='inner_text innerText74 text_editor_resets' >
+                                <div  class='innerText74_ContentDiv'>
+                                    <p class="Normal-White center">Getting started with Clarify.</p>
+                                </div>
+                            </div>
+
+                            <div id='innerShape99__Shape99'   data-id='innerShape99' class='dataTypeShape  innerShape99  fit_to_bg_new' data-type='Shape' ></div>
+
+                            <div id='innerShape88__Shape88_Shape871200'   data-id='innerShape88' class='dataTypeShape  innerShape88' data-type='Shape' ></div>
+                            <div id='innerText77__Text77' data-id='innerText77' style='' data-type="text" class='inner_text innerText77 text_editor_resets' >
+                                <div  class='innerText77_ContentDiv'>
+                                    <h3 class="SubTitle ospfxw11fe447c5a3bfa31ffe07714e8fd6b78ossfx center">Quickstarts</h3>
+                                </div>
+                            </div>
+                            <div id='innerText81__Text81' data-id='innerText81' style='' data-type="text" class='inner_text innerText81 text_editor_resets' >
+                                <div  class='ContentDiv'>
+                                    <p class="Normal ospfxw687a85072fc029198be1abfcf4c3ad1aossfx">A simple set of tutorials with code snippets showing how to index and search your audio &amp; video files.</p>
+                                </div>
+                            </div>
+                            <div id='innerText96__Text96_Text8760' data-id='innerText96' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText96 text_editor_resets' >
+                                <div  class='docs-buttons'>
+                                    <p class="Buttons-White ospfxw4740379de710b82c6a7908a90be9d680ossfx"><a class="Buttons-White" href="/quickstarts">Show me the code</a></p>
+                                </div>
+                            </div>
+
+                            <div id='innerShape89__Shape89_Shape1028412'   data-id='innerShape89' class='dataTypeShape  innerShape89' data-type='Shape' ></div>
+                            <div id='innerText91__Text91_Text459918' data-id='innerText91' style='' data-type="text" class='inner_text innerText91 text_editor_resets' >
+                                <div  class='innerText91_ContentDiv'>
+                                    <h3 class="SubTitle ospfxw0bf82b43ec153aec1a5b4550afa049d1ossfx center">Helper Libraries</h3>
+                                </div>
+                            </div>
+                            <div id='innerImage92__Image92_Image161280' data-id='innerImage92' data-type='Image' class='dataTypeImage  innerImage92'>
+                                <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/folder.png"    >
+                            </div>
+                            <div id='innerText94__Text94_Text1531936' data-id='innerText94' style='' data-type="text" class='inner_text innerText94 text_editor_resets' >
+                                <div  class='innerText94_ContentDiv'>
+                                    <p class="Normal ospfxwdbadeafea9934fd05a07aef7d0e6d6f6ossfx">These libraries provide language-specific interfaces to the REST API. Available in PHP, Python, Ruby, Java, and Node.js</p>
+                                </div>
+                            </div>
+                            <div id='innerText97__Text97_Text188200' data-id='innerText97' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText97 text_editor_resets' >
+                                <div  class='docs-buttons'>
+                                    <p class="Buttons-White ospfxwf505af26e9bc06f7c870c20a5370af82ossfx"><a class="Buttons-White" href="/libraries">Download now</a></p>
+                                </div>
+                            </div>
+
+                            <div id='innerShape90__Shape90_Shape1178842'   data-id='innerShape90' class='dataTypeShape  innerShape90' data-type='Shape' ></div>
+                            <div id='innerText78__Text78_Text374880' data-id='innerText78' style='' data-type="text" class='inner_text innerText78 text_editor_resets' >
+                                <div  class='innerText78_ContentDiv'>
+                                    <h3 class="SubTitle ospfxw83cb3a253e28b52fc54b7a12960368dfossfx center">API Guide</h3>
+                                </div>
+                            </div>
+                            <div id='innerImage79__Image79_Image2103300' data-id='innerImage79' data-type='Image' class='dataTypeImage  innerImage79'>
+                                <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/gear.png"    >
+                            </div>
+                            <div id='innerText84__Text84_Text687232' data-id='innerText84' style='' data-type="text" class='inner_text innerText84 text_editor_resets' >
+                                <div  class='innerText84_ContentDiv'>
+                                    <p class="Normal ospfxw63064f676380d6d87c2f714ddf408cabossfx">Looking for the raw HTTP verbs &amp; nouns? This is the place to go to view our Swagger documentation.</p>
+                                </div>
+                            </div>
+                            <div id='innerText98__Text98_Text1240' data-id='innerText98' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText98 text_editor_resets' >
+                                <div  class='docs-buttons'>
+                                    <p class="Buttons-White ospfxwc5397fb6da7645d6c20e493a884f4017ossfx"><a class="Buttons-White" href="/api">API Documentation</a></p>
+                                </div>
+                            </div>
+
+                            <div id='innerText87__Text87_Text28656' data-id='innerText87' style='border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText87 text_editor_resets' >
+                                <div  class='innerText87_ContentDiv'>
+                                    <p class="Buttons-White ospfxw66c7b28675da70c98ccad9d371659353ossfx">
+                                        <a class="Buttons-White" href="https://developer.clarify.io/accounts/signup/">Sign up now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+
+                <link rel="stylesheet" type="text/css" href="/assets/css/docs.css"/>
+                {% include footer.html %}
             </div>
-        </header>
-        <main>
-            <div id='mainMainRow3' class='dataTypeMainRow mainMainRow3' data-type='MainRow'>
-                <div id='mainMainContent4' class='dataTypeMainContent mainMainContent4 ContentHeight' data-type='MainContent'>
-                    <div id='innerText27__Text27_Text93600' data-id='innerText27' style='' data-type="text" class='inner_text innerText27 text_editor_resets' >
-                        <div  class='ContentDiv'>
-                            <h1 class="PageTitle ospfxwcd97a6f780b1dffd901d18153eacfc88ossfx">Documentation</h1>
-                        </div>
-                    </div>
-                    <div id='innerImage38__Image38_Image1174275' data-id='innerImage38' data-type='Image' class='dataTypeImage  innerImage38'>
-                        <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/quickstarts.png"    >
-                    </div>
-                    <div id='innerText74__Text74_Text12138' data-id='innerText74' style='' data-type="text" class='inner_text innerText74 text_editor_resets' >
-                        <div  class='innerText74_ContentDiv'>
-                            <p class="Normal-White center">Getting started with Clarify.</p>
-                        </div>
-                    </div>
-
-                    <div id='innerShape99__Shape99'   data-id='innerShape99' class='dataTypeShape  innerShape99  fit_to_bg_new' data-type='Shape' ></div>
-
-                    <div id='innerShape88__Shape88_Shape871200'   data-id='innerShape88' class='dataTypeShape  innerShape88' data-type='Shape' ></div>
-                    <div id='innerText77__Text77' data-id='innerText77' style='' data-type="text" class='inner_text innerText77 text_editor_resets' >
-                        <div  class='innerText77_ContentDiv'>
-                            <h3 class="SubTitle ospfxw11fe447c5a3bfa31ffe07714e8fd6b78ossfx center">Quickstarts</h3>
-                        </div>
-                    </div>
-                    <div id='innerText81__Text81' data-id='innerText81' style='' data-type="text" class='inner_text innerText81 text_editor_resets' >
-                        <div  class='ContentDiv'>
-                            <p class="Normal ospfxw687a85072fc029198be1abfcf4c3ad1aossfx">A simple set of tutorials with code snippets showing how to index and search your audio &amp; video files.</p>
-                        </div>
-                    </div>
-                    <div id='innerText96__Text96_Text8760' data-id='innerText96' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText96 text_editor_resets' >
-                        <div  class='docs-buttons'>
-                            <p class="Buttons-White ospfxw4740379de710b82c6a7908a90be9d680ossfx"><a class="Buttons-White" href="/quickstarts">Show me the code</a></p>
-                        </div>
-                    </div>
-
-                    <div id='innerShape89__Shape89_Shape1028412'   data-id='innerShape89' class='dataTypeShape  innerShape89' data-type='Shape' ></div>
-                    <div id='innerText91__Text91_Text459918' data-id='innerText91' style='' data-type="text" class='inner_text innerText91 text_editor_resets' >
-                        <div  class='innerText91_ContentDiv'>
-                            <h3 class="SubTitle ospfxw0bf82b43ec153aec1a5b4550afa049d1ossfx center">Helper Libraries</h3>
-                        </div>
-                    </div>
-                    <div id='innerImage92__Image92_Image161280' data-id='innerImage92' data-type='Image' class='dataTypeImage  innerImage92'>
-                        <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/folder.png"    >
-                    </div>
-                    <div id='innerText94__Text94_Text1531936' data-id='innerText94' style='' data-type="text" class='inner_text innerText94 text_editor_resets' >
-                        <div  class='innerText94_ContentDiv'>
-                            <p class="Normal ospfxwdbadeafea9934fd05a07aef7d0e6d6f6ossfx">These libraries provide language-specific interfaces to the REST API. Available in PHP, Python, Ruby, Java, and Node.js</p>
-                        </div>
-                    </div>
-                    <div id='innerText97__Text97_Text188200' data-id='innerText97' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText97 text_editor_resets' >
-                        <div  class='docs-buttons'>
-                            <p class="Buttons-White ospfxwf505af26e9bc06f7c870c20a5370af82ossfx"><a class="Buttons-White" href="/libraries">Download now</a></p>
-                        </div>
-                    </div>
-
-                    <div id='innerShape90__Shape90_Shape1178842'   data-id='innerShape90' class='dataTypeShape  innerShape90' data-type='Shape' ></div>
-                    <div id='innerText78__Text78_Text374880' data-id='innerText78' style='' data-type="text" class='inner_text innerText78 text_editor_resets' >
-                        <div  class='innerText78_ContentDiv'>
-                            <h3 class="SubTitle ospfxw83cb3a253e28b52fc54b7a12960368dfossfx center">API Guide</h3>
-                        </div>
-                    </div>
-                    <div id='innerImage79__Image79_Image2103300' data-id='innerImage79' data-type='Image' class='dataTypeImage  innerImage79'>
-                        <img width="130" height="130"   style="position:absolute;width:130;height:130;left:0px;top:0px" alt="" title="" src="http://clarify.io/wp-content/themes/clarify/images/gear.png"    >
-                    </div>
-                    <div id='innerText84__Text84_Text687232' data-id='innerText84' style='' data-type="text" class='inner_text innerText84 text_editor_resets' >
-                        <div  class='innerText84_ContentDiv'>
-                            <p class="Normal ospfxw63064f676380d6d87c2f714ddf408cabossfx">Looking for the raw HTTP verbs &amp; nouns? This is the place to go to view our Swagger documentation.</p>
-                        </div>
-                    </div>
-                    <div id='innerText98__Text98_Text1240' data-id='innerText98' style='background-color:#549FAD;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText98 text_editor_resets' >
-                        <div  class='docs-buttons'>
-                            <p class="Buttons-White ospfxwc5397fb6da7645d6c20e493a884f4017ossfx"><a class="Buttons-White" href="/api">API Documentation</a></p>
-                        </div>
-                    </div>
-
-                    <div id='innerText87__Text87_Text28656' data-id='innerText87' style='border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText87 text_editor_resets' >
-                        <div  class='innerText87_ContentDiv'>
-                            <p class="Buttons-White ospfxw66c7b28675da70c98ccad9d371659353ossfx">
-                                <a class="Buttons-White" href="https://developer.clarify.io/accounts/signup/">Sign up now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <link rel="stylesheet" type="text/css" href="/assets/css/docs.css"/>
-        {% include footer.html %}
-    </div>
-</div>
-{% include ga.html %}
-</body>
+        </div>
+        {% include ga.html %}
+    </body>
 </html>
