--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         {% include head.html %}
     </head>
     <body>
-        <div id='skrollr-body'>
+        <div>
             <input type="hidden" class="bp_data" data-bp="pc" data-value="960" />
             <div class='generalSitebackgroundDiv'></div>
             <div class='innerMainPanel0'></div>
