--- a/_layouts/fullpage.html
+++ b/_layouts/fullpage.html
@@ -3,31 +3,31 @@
     <head>
         {% include head.html %}
     </head>
-<body>
-<div id='skrollr-body'>
-    <input type="hidden" class="bp_data" data-bp="pc" data-value="960" />
-    <div class='generalSitebackgroundDiv'></div>
-    <div class='innerMainPanel0'></div>
-    <div class='dataTypeMainPanel mainMainPanel0' data-type='MainPanel'>
-        {% include navigation.html %}
+    <body>
+        <div>
+            <input type="hidden" class="bp_data" data-bp="pc" data-value="960" />
+            <div class='generalSitebackgroundDiv'></div>
+            <div class='innerMainPanel0'></div>
+            <div class='dataTypeMainPanel mainMainPanel0' data-type='MainPanel'>
+                {% include navigation.html %}
 
-        <div data-id='mainShape24' class='dataTypeShape  mainShape24 mainShape' data-type='Shape' ></div>
+                <div data-id='mainShape24' class='dataTypeShape  mainShape24 mainShape' data-type='Shape' ></div>
 
-        <header>
-            <div class='dataTypeMainRow mainMainRow1 ' data-type='MainRow'>
-                <div class='dataTypeMainContent mainMainContent2' data-type='MainContent'></div>
+                <header>
+                    <div class='dataTypeMainRow mainMainRow1 ' data-type='MainRow'>
+                        <div class='dataTypeMainContent mainMainContent2' data-type='MainContent'></div>
+                    </div>
+                </header>
+                <div class="layout">
+                    <section class="body_container_bottom">
+                        <section class="container_left">
+                            {{ content }}
+                        </section>
+                    </section>
+                </div>
+                {% include footer.html %}
             </div>
-        </header>
-        <div class="layout">
-            <section class="body_container_bottom">
-                <section class="container_left">
-                    {{ content }}
-                </section>
-            </section>
         </div>
-        {% include footer.html %}
-    </div>
-</div>
-{% include ga.html %}
-</body>
+        {% include ga.html %}
+    </body>
 </html>
