--- a/_includes/sections/media-loading.html
+++ b/_includes/sections/media-loading.html
@@ -1,29 +1,21 @@
+<h3>Loading Audio</h3>
+<p>First include the SDK and create your object using your API Key. Once you&#8217;ve created the object, you can use the object to load each of your audio files as shown:</p>
+
 <div id="media-loading-tabs">
     <ul class="resp-tabs-list media-loading-tabs">
-        <li>PHP</li>
-        <li>Java</li>
-        <li>Python</li>
-        <li>Ruby</li>
-        <li>curl</li>
+        {% for language in page.languages %}
+        <li>{{ language }}</li>
+        {% endfor %}
     </ul>
     <div class="resp-tabs-container media-loading-tabs">
-        <div>
-            <script src="https://gist.github.com/caseysoftware/74ac1cce0e65625b92ab.js"></script>
-        </div>
-        <div>
-            <script src="https://gist.github.com/caseysoftware/1729f47c7a9e4ff679fe.js"></script>
-        </div>
-        <div>
-            <script src="https://gist.github.com/caseysoftware/0e32e470dc9d58a44df6.js"></script>
-        </div>
-        <div>
-            <script src="https://gist.github.com/caseysoftware/6a8f2fc78e3bcab19de4.js"></script>
-        </div>
-        <div>
-            <script src="https://gist.github.com/caseysoftware/24f45a2dbd99681b1655.js"></script>
-        </div>
+        {% for language in page.languages %}
+        {% include /source/{{language}}/media-loading.html %}
+        {% endfor %}
     </div>
 </div>
+
+<p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
+<p><em><strong>Hint:</strong> You don&#8217;t have to download these files. Instead you can pass us these urls via the create method shown above.</em></p>
 
 <script>
     $(document).ready(function() {
