wiring the new code styling

--- a/_layouts/quickstart.html
+++ b/_layouts/quickstart.html
@@ -3,6 +3,9 @@
     <head>
         {% include head.html %}
         <script src="/assets/js/easyResponsiveTabs.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+        <link rel="stylesheet" href="/assets/css/zenburn.css">
+        <script>hljs.initHighlightingOnLoad();</script>
     </head>
     <body>
         <div>
