updated the samples from gists to highlights

--- a/_includes/sections/setup.html
+++ b/_includes/sections/setup.html
@@ -1,6 +1,6 @@
 
 <h3>Configuring Your Environment</h3>
-<p>While you can use any programming language you choose, we provide a few <a href="https://github.com/Clarify" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify', 'helper libraries']);" >helper libraries</a> to get you started. In most cases, you can use your favorite package manager:</p>
+<p>While you can use any programming language you choose, we provide a few <a href="/libraries/" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify', 'helper libraries']);" >helper libraries</a> to get you started. In most cases, you can use your favorite package manager:</p>
 
 <div id="setup-tabs">
     <ul class="resp-tabs-list setup-tabs">
