--- a/_includes/source/curl/media-searching.html
+++ b/_includes/source/curl/media-searching.html
@@ -1,3 +1,8 @@
 <div>
-    <script src="https://gist.github.com/caseysoftware/0c7a53e2b2c128a15699.js"></script>
+    <pre>
+<code class="bash">
+curl https://api.clarify.io/v1/search?query=dorothy \
+    --header "Authorization: Bearer myapikey"
+</code>
+    </pre>
 </div>
