--- a/_includes/source/java/media-loading.html
+++ b/_includes/source/java/media-loading.html
@@ -1,3 +1,24 @@
 <div>
-    <script src="https://gist.github.com/caseysoftware/1729f47c7a9e4ff679fe.js"></script>
+    <pre>
+<code class="java">
+import io.clarify.api.*;
+import java.net.URI;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        String appKey = "my api key";
+
+        // Construct the API client
+        ClarifyClient client = new ClarifyClient(appKey);
+
+        // Create your first bundle using an example audio file
+        String name = "Dorothy and the Wizard of Oz";
+        URI mediaUrl =  URI.create("http://media.clarify.io/audio/books/dorothyandthewizardinoz_01_baum_64kb.mp3");
+        Bundle bundle = client.createBundle(name, mediaUrl);
+
+        System.out.println(bundle.id());
+    }
+}
+</code>
+    </pre>
 </div>
