--- a/_includes/source/php/media-loading.html
+++ b/_includes/source/php/media-loading.html
@@ -1,3 +1,12 @@
 <div>
-    <script src="https://gist.github.com/caseysoftware/74ac1cce0e65625b92ab.js"></script>
+    <pre>
+<code class="php">
+&lt;php
+
+require '../vendor/autoload.php';
+
+$bundle = new Clarify\Bundle('my api key');
+$result = $bundle->create('Dorothy and the Wizard of Oz', 'http://media.clarify.io/audio/books/dorothyandthewizardinoz_01_baum_64kb.mp3');
+</code>
+    </pre>
 </div>
