--- a/_includes/source/php/setup.html
+++ b/_includes/source/php/setup.html
@@ -1,6 +1,14 @@
 <div>
     <p>In PHP, you simply install the Clarify SDK using Composer:</p>
-    <script src="https://gist.github.com/caseysoftware/d76fe9c40fe8698b5409.js"></script>
+    <pre>
+<code class="json">
+{
+    "require": {
+        "clarify/clarify-helper": "~1.2.1"
+    }
+}
+</code>
+    </pre>
     <p>And then simply run:</p>
-    <pre crayon="false">composer install</pre>
+    <pre><code class="bash">composer install</code></pre>
 </div>
