--- a/_includes/source/python/media-loading.html
+++ b/_includes/source/python/media-loading.html
@@ -1,3 +1,12 @@
 <div>
-    <script src="https://gist.github.com/caseysoftware/0e32e470dc9d58a44df6.js"></script>
+    <pre>
+<code class="python">
+from clarify_python import clarify
+
+clarify.set_key('my api key')
+
+clarify.create_bundle(name='Dorothy and the Wizard of Oz',
+        media_url='http://media.clarify.io/audio/books/dorothyandthewizardinoz_01_baum_64kb.mp3')
+</code>
+    </pre>
 </div>
