--- a/_includes/source/python/setup.html
+++ b/_includes/source/python/setup.html
@@ -1,4 +1,10 @@
 <div>
     <p>In Python, you simply install the Clarify module via pip:</p>
-    <script src="https://gist.github.com/caseysoftware/fff90c0ec4ab9c1da2dc.js"></script>
+    <pre>
+<code class="bash">
+pip install clarify_python
+
+# Don't forget to use sudo if appropriate.
+</code>
+    </pre>
 </div>
