--- a/_includes/source/ruby/media-searching.html
+++ b/_includes/source/ruby/media-searching.html
@@ -1,3 +1,26 @@
 <div>
-    <script src="https://gist.github.com/caseysoftware/71b5f9214ffab5e89818.js"></script>
+    <pre>
+<code class="ruby">
+require 'clarify'
+
+clarify = Clarify::Client.new(api_key: 'docs-api-key')
+
+results = clarify.bundles.search('dorothy')
+
+results.each do |bundle_results, bundle_url|
+    # Fetch the bundle:
+    bundle = clarify.get(bundle_url)
+
+    puts "#{bundle.name} - #{bundle_url}"
+    bundle_results['term_results'].each do |term_result|
+        term_result['matches'].each do |match|
+            type = match['type']
+            match['hits'].each do |hit|
+                puts "\tmatched #{type} content at #{hit['start']} to #{hit['end']}"
+            end
+        end
+    end
+end
+</code>
+    </pre>
 </div>
