--- a/_includes/source/ruby/setup.html
+++ b/_includes/source/ruby/setup.html
@@ -1,4 +1,12 @@
 <div>
     <p>In Ruby, you simply install the Clarify gem and set your API key as an environment variable:</p>
-    <script src="https://gist.github.com/caseysoftware/8c05de89ea29d1e12b17.js"></script>
+    <pre>
+<code class="bash">
+gem install clarify
+
+export CLARIFY_API_KEY=abcde12345
+
+# Don't forget to use sudo if appropriate.
+</code>
+    </pre>
 </div>
