--- a/_includes/sections/media-searching.html
+++ b/_includes/sections/media-searching.html
@@ -18,14 +18,14 @@
 
 <p>And here are the results using the Wizard of Oz clip we loaded:</p>
 
-<pre>/v1/audio/8ee0e56929c248ba895d19ead47c9993
+<pre><code class="bash">/v1/audio/8ee0e56929c248ba895d19ead47c9993
 Dorothy and the Wizard of Oz
 2.35 -- 2.59
 172.49 -- 172.83
 224.82 -- 225.08
 271.49 -- 271.8
 329.1 -- 329.31
-480.45 -- 480.92</pre>
+480.45 -- 480.92</code></pre>
 
 <script>
     $(document).ready(function() {
