--- a/_includes/source/java/setup.html
+++ b/_includes/source/java/setup.html
@@ -1,4 +1,12 @@
 <div>
     <p>In Java, you simply install the Clarify SDK via your Maven pom.xml:</p>
-    <script src="https://gist.github.com/caseysoftware/8d6c09439935c667abec.js"></script>
+    <pre>
+<code class="xml">
+&lt;dependency>
+    &lt;groupId>io.clarify.api&lt;/groupId>
+    &lt;artifactId>clarify-api-sdk&lt;/artifactId>
+    &lt;version>1.0.0&lt;/version>
+&lt;/dependency>
+</code>
+    </pre>
 </div>
