tweaks for playing snippet

--- a/_includes/sections/media-playing.html
+++ b/_includes/sections/media-playing.html
@@ -8,10 +8,43 @@
     </ul>
     <div class="resp-tabs-container player-tabs">
         <div>
-            <script src="https://gist.github.com/caseysoftware/61b7ba71d82def9cbbfc.js"></script>
+            <pre>
+<code class="php">
+&lt;?php
+
+require '../vendor/autoload.php';
+
+$bundle = new Clarify\Bundle($apikey);
+$items = $bundle->search($terms);
+
+    $search_terms = json_encode($items['search_terms']);
+    $item_results = json_encode($items['item_results']);
+
+    $audiokey = $items['_links']['items'][0]['href'];
+    $tracks = $bundle->tracks($audiokey)['tracks'];
+    $mediaUrl = $tracks[0]['media_url'];
+</code>
+            </pre>
         </div>
         <div>
-            <script src="https://gist.github.com/caseysoftware/50c11c58b65d5127eae6.js"></script>
+            <pre>
+<code class="python">
+from clarify_python import clarify
+import json
+
+clarify.set_key('my api key')
+
+result = clarify.search(query='dorothy')
+search_terms = json.dumps(result['search_terms'])
+item_results = json.dumps(result['item_results'])
+
+bundleref = result['_links']['items'][0]['href']
+bundle = clarify.get_bundle(bundleref)
+tracksref = bundle['_links']['o3v:tracks']['href']
+tracks = clarify.get_track_list(tracksref)['tracks']
+mediaURL = tracks[0]['media_url']
+</code>
+            </pre>
         </div>
     </div>
 </div>
