wiring in the samples

--- a/_includes/source/php/setup.html
+++ b/_includes/source/php/setup.html
@@ -10,5 +10,11 @@
 </code>
     </pre>
     <p>And then simply run:</p>
-    <pre><code class="bash">composer install</code></pre>
+    <pre>
+<code class="bash">
+composer install
+
+# Don't forget to use sudo if appropriate.
+</code>
+    </pre>
 </div>
