converting the rest of the quickstarts to the embedded format, completely off of github

--- a/_includes/sections/media-searching.html
+++ b/_includes/sections/media-searching.html
@@ -27,6 +27,8 @@ Dorothy and the Wizard of Oz
 329.1 -- 329.31
 480.45 -- 480.92</code></pre>
 
+<p><strong>Note:</strong> Your search results for this clip might be slightly different as our systems use machine learning and get better all the time.</p>
+
 <script>
     $(document).ready(function() {
         $('#searching-tabs').easyResponsiveTabs({
