--- a/_includes/source/php/setup.html
+++ b/_includes/source/php/setup.html
@@ -1,5 +1,5 @@
 <div>
-    <p>In PHP, you simply install the Clarify SDK using Composer:</p>
+    <p>You can install the Clarify SDK using <a href="https://getcomposer.org/" target="_new">Composer</a>:</p>
     <pre>
 <code class="json">
 {
